fix: fix spacing

--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@
 }
 
 main {
+  /* fallback for older browsers */
   height: calc(100vh - var(--footer-height) - 2rem);
+  height: calc(100svh - var(--footer-height) - 2rem);
 }
 
 .content-container {
@@ -28,8 +30,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 6.4rem;
-  padding: 1.2rem 3.2rem 4rem 3.2rem;
+  gap: 4.8rem;
+  padding: 1.2rem 3.2rem 3.2rem 3.2rem;
   height: 100%;
 }
 
